--- a/.github/workflows/buildRelease.yml
+++ b/.github/workflows/buildRelease.yml
@@ -43,20 +43,23 @@ jobs:
       run: | 
         echo -e "version = 'v${{ steps.bump_version.outputs.next-version }}'\ngithub_username = '$gitUser'\ngithub_password = '$gitPass'\ngitlab_private_access_token = '$gitToken'"> ./builder/config.py
     
-    - name: Compile DeepSea Zip
+    - name: Compile Isotope Zip
       run: |
         cd ./builder
-        python ./builder.py deepsea output="./deepsea.zip" > ../output
+        python ./builder.py isotope output="./isotope.zip" > ../output
+        echo ""  >> ../output
 
-    - name: Compile DeepSea-patches Zip
+    - name: Compile Isotope-patches Zip
       run: |
         cd ./builder
-        python ./builder.py deepsea-patches output="./deepsea-patched.zip" >> ../output
+        python ./builder.py isotope-patches output="./isotope-patched.zip" >> ../output
+        echo ""  >> ../output
     
-    - name: Compile DeepSea-minimal Zip
+    - name: Compile Isotope-minimal Zip
       run: |
         cd ./builder
-        python ./builder.py deepsea-mini output="./deepsea-minimal.zip" >> ../output
+        python ./builder.py isotope-mini output="./isotope-minimal.zip" >> ../output
+        echo ""  >> ../output
     
     - name: Bump VERSION
       run: |	
@@ -81,40 +84,40 @@ jobs:
           prerelease: false
 
 
-    - name: Upload Release Asset - DeepSea
+    - name: Upload Release Asset - Isotope
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./builder/deepsea.zip
-          asset_name: deepsea_v${{ steps.bump_version.outputs.next-version }}.zip
+          asset_path: ./builder/isotope.zip
+          asset_name: isotope_v${{ steps.bump_version.outputs.next-version }}.zip
           asset_content_type: application/zip
 
 
-    - name: Upload Release Asset - DeepSea-Patches
+    - name: Upload Release Asset - Isotope-Patches
       id: upload-release-asset2
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./builder/deepsea-patched.zip
-          asset_name: deepsea-patched_v${{ steps.bump_version.outputs.next-version }}.zip
+          asset_path: ./builder/isotope-patched.zip
+          asset_name: isotope-patched_v${{ steps.bump_version.outputs.next-version }}.zip
           asset_content_type: application/zip
 
 
 
-    - name: Upload Release Asset - DeepSea-Minimal
+    - name: Upload Release Asset - Isotope-Minimal
       id: upload-release-asset3
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./builder/deepsea-minimal.zip
-          asset_name: deepsea-minimal_v${{ steps.bump_version.outputs.next-version }}.zip
+          asset_path: ./builder/isotope-minimal.zip
+          asset_name: isotope-minimal_v${{ steps.bump_version.outputs.next-version }}.zip
           asset_content_type: application/zip   
 
 
