--- a/.github/workflows/buildRelease.yml
+++ b/.github/workflows/buildRelease.yml
@@ -14,7 +14,22 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-      
+    
+    - name: Update and Install Build Dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install gcc
+        sudo apt-get clean
+
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8.3
+
+    - name: Install dependencies
+      run: |
+        if [ -f ./builder/requirements.txt ]; then pip3 install -r ./builder/requirements.txt; fi
+
     - name: Bump version
       run: |
         g++ bump_version.cpp bump_version
@@ -32,15 +47,6 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8.3
-
-    - name: Install dependencies
-      run: |
-        if [ -f ./builder/requirements.txt ]; then pip3 install -r ./builder/requirements.txt; fi
         
     - name: Create config script
       env:
