--- a/.github/workflows/buildRelease.yml
+++ b/.github/workflows/buildRelease.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Bump version
       run: |
-        g++ bump_version.cpp bump_version
+        g++ bump_version.cpp -o bump_version
         ./bump_version
         echo ::set-env name=VERSION::$(cat ./VERSION)
         echo ::set-env name=NAME::$(cat ./NAME)
