--- a/.github/workflows/buildRelease.yml
+++ b/.github/workflows/buildRelease.yml
@@ -93,7 +93,7 @@ jobs:
     - uses: pCYSl5EDgo/cat@master
       id: release
       with:
-        path: ./output
+        path: ./VERSION
     
     - name: Create Release
       id: create_release
